Rename API method for signaling AIP upload
Rename API `UpdateAip` endpoint to `SubmitAipComplete` to match it's
usage and avoid confusion with the `UpdateAIP()` method which updates
AIP data.
