# internal/api/gen/http/openapi.yaml
@@ -1537,17 +1537,17 @@ paths:
                 - http
             security:
                 - jwt_header_Authorization: []
-    /storage/aips/{uuid}/update:
+    /storage/aips/{uuid}/submit-complete:
         post:
             tags:
                 - storage
-            summary: update_aip storage
+            summary: submit_aip_complete storage
             description: |-
                 Signal that an AIP submission is complete
 
                 **Required security scopes for jwt**:
                   * `storage:aips:submit`
-            operationId: storage#update_aip
+            operationId: storage#submit_aip_complete
             parameters:
                 - name: uuid
                   in: path
@@ -1565,7 +1565,7 @@ paths:
                 "400":
                     description: Bad Request response.
                     schema:
-                        $ref: '#/definitions/StorageUpdateAipNotValidResponseBody'
+                        $ref: '#/definitions/StorageSubmitAipCompleteNotValidResponseBody'
                 "401":
                     description: Unauthorized response.
                     schema:
@@ -1577,7 +1577,7 @@ paths:
                 "409":
                     description: Conflict response.
                     schema:
-                        $ref: '#/definitions/StorageUpdateAipNotAvailableResponseBody'
+                        $ref: '#/definitions/StorageSubmitAipCompleteNotAvailableResponseBody'
             schemes:
                 - http
             security:
@@ -5493,6 +5493,92 @@ definitions:
             approved: false
         required:
             - approved
+    StorageSubmitAipCompleteNotAvailableResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: false
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: false
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: false
+        description: submit_aip_complete_not_available_response_body result type (default view)
+        example:
+            fault: false
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: false
+            timeout: false
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
+    StorageSubmitAipCompleteNotValidResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: false
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: false
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: false
+        description: submit_aip_complete_not_valid_response_body result type (default view)
+        example:
+            fault: false
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: false
+            timeout: false
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
     StorageSubmitAipNotAvailableResponseBody:
         title: 'Mediatype identifier: application/vnd.goa.error; view=default'
         type: object
@@ -5590,92 +5676,6 @@ definitions:
             name: abc123
         required:
             - name
-    StorageUpdateAipNotAvailableResponseBody:
-        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
-        type: object
-        properties:
-            fault:
-                type: boolean
-                description: Is the error a server-side fault?
-                example: false
-            id:
-                type: string
-                description: ID is a unique identifier for this particular occurrence of the problem.
-                example: 123abc
-            message:
-                type: string
-                description: Message is a human-readable explanation specific to this occurrence of the problem.
-                example: parameter 'p' must be an integer
-            name:
-                type: string
-                description: Name is the name of this class of errors.
-                example: bad_request
-            temporary:
-                type: boolean
-                description: Is the error temporary?
-                example: false
-            timeout:
-                type: boolean
-                description: Is the error a timeout?
-                example: false
-        description: update_aip_not_available_response_body result type (default view)
-        example:
-            fault: false
-            id: 123abc
-            message: parameter 'p' must be an integer
-            name: bad_request
-            temporary: false
-            timeout: false
-        required:
-            - name
-            - id
-            - message
-            - temporary
-            - timeout
-            - fault
-    StorageUpdateAipNotValidResponseBody:
-        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
-        type: object
-        properties:
-            fault:
-                type: boolean
-                description: Is the error a server-side fault?
-                example: false
-            id:
-                type: string
-                description: ID is a unique identifier for this particular occurrence of the problem.
-                example: 123abc
-            message:
-                type: string
-                description: Message is a human-readable explanation specific to this occurrence of the problem.
-                example: parameter 'p' must be an integer
-            name:
-                type: string
-                description: Name is the name of this class of errors.
-                example: bad_request
-            temporary:
-                type: boolean
-                description: Is the error temporary?
-                example: false
-            timeout:
-                type: boolean
-                description: Is the error a timeout?
-                example: false
-        description: update_aip_not_valid_response_body result type (default view)
-        example:
-            fault: false
-            id: 123abc
-            message: parameter 'p' must be an integer
-            name: bad_request
-            temporary: false
-            timeout: false
-        required:
-            - name
-            - id
-            - message
-            - temporary
-            - timeout
-            - fault
     SubmitAIPResult:
         title: SubmitAIPResult
         type: object
@@ -5753,6 +5753,7 @@ securityDefinitions:
               * `storage:aips:deletion:request`: no description
               * `storage:aips:deletion:review`: no description
               * `storage:aips:download`: no description
+              * `storage:aips:download-deletion-report`: no description
               * `storage:aips:list`: no description
               * `storage:aips:move`: no description
               * `storage:aips:read`: no description
